Fixed z-index problem with natural html placement stacking

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,4 @@ body {
   background: white;
   color: red;
   font-size: 40px;
-  z-index: 10000;
 }
