--- a/src/components/Scene/style.css
+++ b/src/components/Scene/style.css
@@ -4,5 +4,4 @@
     /* background-image: linear-gradient(360deg
     , #0f0f0f 0%, #0a0a0a 100%); */
     position: fixed;
-    z-index: -.5;
 }
